@@ -296,44 +296,44 @@
 			<label index="JSvalidation_label_validate_one_required">Veuillez choisir une des options ci-dessus</label>
 		</languageKey>
 		<languageKey index="it" type="array">
-			<label index="locallangmarker_confirmation_question">Sono corretti i valori prsentati?</label>
+			<label index="locallangmarker_confirmation_question">Sono corretti i dati presentati?</label>
 			<label index="locallangmarker_confirmation_back">Pagina precedente</label>
 			<label index="locallangmarker_confirmation_files">File allegato %s:</label>
-			<label index="locallangmarker_confirmation_submit">Conferma valori</label>
-			<label index="locallangmarker_email_receiver">Grazie per la tua email:</label>
-			<label index="locallangmarker_email_sender">Hai ricevuto una nuova email:</label>
+			<label index="locallangmarker_confirmation_submit">Confermare i dati</label>
+			<label index="locallangmarker_email_receiver">Grazie per il suo e-mail:</label>
+			<label index="locallangmarker_email_sender">Ha ricevuto un nuovo e-mail:</label>
 			<label index="locallangmarker_mandatory_message">Ci sono errori da verificare:</label>
-			<label index="locallangmarker_mandatory_emptyfield">Il campo deve essere compilato:</label>
+			<label index="locallangmarker_mandatory_emptyfield">Complita questa casella per favore:</label>
 			<label index="locallangmarker_mandatory_submit">Ritorna alla scheda</label>
-			<label index="locallangmarker_error_validemail">Questo indirizzo email non è valido:</label>
-			<label index="locallangmarker_error_file_main">Il file non può essere caricato:</label>
+			<label index="locallangmarker_error_validemail">Questo indirizzo e-mail non è valido:</label>
+			<label index="locallangmarker_error_file_main">Il file non può essere scaricato:</label>
 			<label index="locallangmarker_error_file_toolarge">Il file è troppo grande:</label>
 			<label index="locallangmarker_error_file_extension">L'estensione del file non è permessa:</label>
-			<label index="error_check_subject_r">Si prega di compilare i campi seguenti: Oggetto della email per il ricevente</label>
-			<label index="error_check_recipient">Si prega di compilare i campi seguenti: Indirizzo email del ricevente</label>
+			<label index="error_check_subject_r">Si prega di compilare i campi seguenti: Oggetto dell'e-mail per il ricevente</label>
+			<label index="error_check_recipient">Si prega di compilare i campi seguenti: Indirizzo e-mail del ricevente</label>
 			<label index="error_captcha_empty">Captcha Code vuoto</label>
 			<label index="error_captcha_wrong">Captcha Code errato</label>
 			<label index="error_backend_noip">IP logging disabilitato</label>
-			<label index="error_validemail">Indirizzo email non valido</label>
-			<label index="error_nomx">Indirizzo email non esistente</label>
+			<label index="error_validemail">Indirizzo e-mail non valido</label>
+			<label index="error_nomx">Indirizzo e-mail non esistente</label>
 			<label index="error_unique_field">%s già utilizzato</label>
 			<label index="error_unique_ip">Indirizzo IP %s già utilizzato</label>
 			<label index="error_expression_validation">Errori riscontrati nella validazione</label>
-			<label index="multiple_forward">Passo sucessivo</label>
+			<label index="multiple_forward">Passo successivo</label>
 			<label index="multiple_back">Passo precedente</label>
 			<label index="pagebrowser_inner"> di </label>
-			<label index="JSvalidation_label_required">Campo obbligatorio</label>
-			<label index="JSvalidation_label_validate_number">Il campo richiede un valore numerico</label>
+			<label index="JSvalidation_label_required">Casella obbligatoria</label>
+			<label index="JSvalidation_label_validate_number">La casella richiede un valore numerico</label>
 			<label index="JSvalidation_label_validate_digits">Si utilizzino valori numerici. Spazio, punteggiatura ed altri caratteri simili non sono ammessi</label>
-			<label index="JSvalidation_label_validate_alpha">Il campo richiede caratteri alfabetici (a-z)</label>
-			<label index="JSvalidation_label_validate_alphanum">Il campo richiede caratteri alfabetici (a-z) o numerici (0-9). Spazio, punteggiatura ed altri caratteri simili non sono ammessi</label>
-			<label index="JSvalidation_label_validate_date">Il campo richiede una data</label>
-			<label index="JSvalidation_label_validate_email">Il campo richiede un indirizzo email (test@test.com)</label>
-			<label index="JSvalidation_label_validate_url">Il campo richiede un indirizzo URL (http://www.test.com)</label>
+			<label index="JSvalidation_label_validate_alpha">La casella richiede caratteri alfabetici (a-z)</label>
+			<label index="JSvalidation_label_validate_alphanum">La casella richiede caratteri alfabetici (a-z) o numerici (0-9). Spazio, punteggiatura ed altri caratteri simili non sono ammessi</label>
+			<label index="JSvalidation_label_validate_date">La casella richiede una data</label>
+			<label index="JSvalidation_label_validate_email">La casella richiede un indirizzo email (test@test.com)</label>
+			<label index="JSvalidation_label_validate_url">La casella richiede un indirizzo URL (http://www.test.com)</label>
 			<label index="JSvalidation_label_validate_date_au">Si utilizzi il seguente formato: dd/mm/yyyy. Per esempio 15/03/2006 per il 15 Marzo 2009</label>
-			<label index="JSvalidation_label_validate_currency_dollar">Il campo richiede un valore in valuta $. Per esempio $100.00</label>
+			<label index="JSvalidation_label_validate_currency_dollar">La casella richiede un valore in valuta $. Per esempio $100.00</label>
 			<label index="JSvalidation_label_validate_selection">Selezione richiesta</label>
-			<label index="JSvalidation_label_validate_one_required">Selezionare una delle opzioni di cui sopra</label>
+			<label index="JSvalidation_label_validate_one_required">Selezionare una delle opzioni sopra elencate</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="locallangmarker_confirmation_question">Zijn deze waarden correct?</label>
